<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/aty_welcome_background_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/aty_welcome_to_skip_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/mymusic_margin_twenty"
        android:background="#e0000000"
        android:padding="@dimen/activity_margin_five"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_twelve" />

    <ImageView
        android:id="@+id/aty_welcome_icon_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@mipmap/default_skin_thumbnail" />

    <TextView
        android:id="@+id/aty_welcome_baidu_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aty_welcome_icon_iv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/mymusic_padding_ten"
        android:text="@string/baidumusic"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aty_welcome_baidu_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/mymusic_padding_ten"
        android:text="@string/baiduword" />


</RelativeLayout>