<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_forty"
        android:background="@color/blue"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/activity_individual_fanhui_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_five"
                android:src="@mipmap/fanhui" />

            <TextView
                android:id="@+id/activity_individual_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mymusic_padding_ten"
                android:paddingTop="2dp"
                android:text="@string/individual_more"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_fifteen" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_fifty_five">

        <RelativeLayout
            android:id="@+id/activity_individual_login_no_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_fifty_five">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/activity_individual_login_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/individual_activity_login_frame">

                    <TextView
                        android:id="@+id/activity_individual_login_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/activity_margin_five"
                        android:layout_marginRight="@dimen/activity_margin_five"
                        android:padding="@dimen/activity_margin_five"
                        android:text="@string/individual_login"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/textsize_twelve" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_eight"
                    android:text="@string/login_after"
                    android:textColor="@color/black_normal_least"
                    android:textSize="@dimen/textsize_twelve" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/activity_individual_login_yes_ll"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="@dimen/height_fifty_five">

            <ImageView
                android:layout_width="@dimen/height_forty"
                android:layout_height="@dimen/height_forty"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/mymusic_margin_twenty"
                android:src="@mipmap/login_head" />

            <TextView
                android:id="@+id/activity_individual_login_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_margin_fifteen"
                android:text="@string/zhanghao"
                android:textColor="@color/black_normal_most" />

            <TextView
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/activity_individual_close_login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/mymusic_margin_twenty"
                android:text="@string/exit"
                android:textColor="@color/black_normal_least"
                android:textSize="@dimen/textsize_fifteen" />


        </LinearLayout>
    </RelativeLayout>

    <View style="@style/line_all" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_search_width_twenty_five"
        android:layout_marginLeft="@dimen/activity_margin_fifteen"
        android:layout_marginRight="@dimen/activity_margin_fifteen"
        android:layout_marginTop="@dimen/activity_search_width_twenty_five"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/activity_individual_wifi_selection" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mymusic_padding_ten"
                android:gravity="center"
                android:text="@string/wifi" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/activity_individual_auto_close_selection" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mymusic_padding_ten"
                android:gravity="center"
                android:text="@string/close_timing" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/activity_individual_lyr_selection" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mymusic_padding_ten"
                android:gravity="center"
                android:text="@string/desctop_lrc" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/activity_individual_lockscreen_selection" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mymusic_padding_ten"
                android:gravity="center"
                android:text="@string/locking" />

        </LinearLayout>
    </LinearLayout>

    <View style="@style/line_all" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mymusic_margin_twenty"
        android:layout_marginLeft="@dimen/activity_margin_fifteen"
        android:layout_marginRight="@dimen/activity_margin_fifteen"
        android:layout_marginTop="@dimen/mymusic_margin_twenty"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/setting_tool_bt_setup_skin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_eight"
                android:gravity="center"
                android:text="@string/change_face" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/setting_tool_bt_setup_sound" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_eight"
                android:gravity="center"
                android:text="@string/music_big" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/setting_tool_bt_setup_scan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_eight"
                android:gravity="center"
                android:text="@string/scanning" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/setting_tool_bt_setup_song" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_eight"
                android:gravity="center"
                android:text="@string/listen" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mymusic_margin_twenty"
        android:layout_marginLeft="@dimen/activity_margin_fifteen"
        android:layout_marginRight="@dimen/activity_margin_fifteen"
        android:layout_marginTop="@dimen/mymusic_padding_ten"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/setting_tool_bt_setup_import" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_eight"
                android:gravity="center"
                android:text="@string/computer" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_setting_vip1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_eight"
                android:gravity="center"
                android:text="@string/vip" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/setting_tool_bt_setup_ktv" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_eight"
                android:gravity="center"
                android:text="@string/leidian" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>

    <View style="@style/line_all" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/activity_individual_set_ll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="@dimen/mymusic_margin_twenty"
                android:src="@mipmap/ic_setting_setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_margin_fifteen"
                android:text="@string/shezhi"
                android:textColor="@color/black_normal_most"
                android:textSize="@dimen/textsize_fifteen" />

        </LinearLayout>

        <View style="@style/line_all" />

        <LinearLayout
            android:id="@+id/activity_individual_activity_ll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/mymusic_margin_twenty"
                android:src="@mipmap/ic_setting_activity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_margin_fifteen"
                android:text="@string/active_zone"
                android:textColor="@color/black_normal_most"
                android:textSize="@dimen/textsize_fifteen" />

        </LinearLayout>

        <View style="@style/line_all" />

        <LinearLayout
            android:id="@+id/activity_individual_use_ll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="@dimen/mymusic_margin_twenty"
                android:src="@mipmap/ic_setting_app" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_margin_fifteen"
                android:text="@string/application"
                android:textColor="@color/black_normal_most"
                android:textSize="@dimen/textsize_fifteen" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>